# SteroidAutoClicker

./: CMakeLists.txt  README.md
qml/: AbstractDelegate.qml  ClickDelegate.qml  Main.qml  MouseWheelDelegate.qml  SleepDelegate.qml
src/: abstractjob.cpp  abstractjob.h  autoclicker.cpp  autoclicker.h  clickerjob.cpp  clickerjob.h  main.cpp  mousewheeljob.cpp  mousewheeljob.h  sleepjob.cpp  sleepjob.h
srcInputLinux/: inputevent.cpp  inputevent.h  mainProgram.cpp
